finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-<p>CollinBrooks</p>
+<!DOCTYPE html>
+<html>
+<head>
+   <title>The Final Chiefs Game of the '2016-'17 Season</title>
+</head>
+<body>
+   <main>
+       <article>
+           <header>
+               <h1>The Tailgate</h1>
+           </header>
+               <p>Kansas City weathermen had spent the entire week leading up to
+                  the chiefs game prediciting an ice storm for the ages.  My friends
+                  and I decided that for a home playoff game we were going to tailgate no matter.
+                  We werent the only fans to go this route.  At 2pm there were lines of cars waiting
+                  for the gates to open to get in and get setup.  This was 5.5 hours before any football
+                  was to be played.  By 4 o'clock the lots were full.  Everyone had their tents up, grills
+                  going, and favorite pregame beverages in hand. 32 degrees and rain did nothing to calm
+                  the excitement of the Chiefs fans!  We ate food, met our neighbors, and played games until 7
+                  o'clock rolled around and it was time to get into our seats.</p>
+               <img src='C:\Users\Owner\lc101\html-me-something\images\tailgate1.jpg' alt="Full parking lot" height='350' width= '700'>
+       </article>
+       <article>
+           <header>
+               <a name= '1stQtr'><h1>First Quarter</h1></a>
+           </header>
+               <p>The game between the Pittsburgh Steelers and the Kansas City Chiefs starts and the Arrowhead
+                  crowd is noisy and electric from this moment on until the end.</p>
+               <p>The first quarter is back and forth.  The Steelers opening drives ends in them getting a field goal.
+                  The Chiefs answer immediately with a touchdown to take a 7-3 lead.  On the next Steelers possessiom
+                  another field goal.  The Chiefs offense however stalled and was forced to punt back to the Steelers.
+               <h1>End of 1...Score: 7-6 Chiefs</h1>
+       </article>
+       <article>
+           <header>
+               <a name= '2ndQtr'><h1>Second Quarter</h1></a>
+           </header>
+               <p>The second quarter does not go so well for the Chiefs.  The Chiefs defense gets an interception but
+                 the offense gives an interception, a fumble, and a punt back to Pittsburgh.  Pittsburgh takes these
+                 opportunitites and successfully makes two more field goals.</p>
+               <h1>Halftime... Score: 12-6 Steelers</h1>
+       </article>
+       <article>
+           <header>
+               <a name= '3rdQtr'><h1>Third Quarter</h1></a>
+           </header>
+               <p>The third quarter goes by without much action.  Each team scored one field goal.  Other than that there
+                 were just punts back and forth.  In hindsight this would have been a good quarter to wait in the concessions
+                 line!</p>
+               <h1>End of 3... Score: 15-10 Steelers</h1>
+       </article>
+       <article>
+           <header>
+               <a name= '4thQtr'><h1>Forth Quarter</h1></a>
+           </header>
+               <p>The forth quarter opens with the Steelers kicking thier sixth and final field goal of the game.
+                 The Chiefs would then put a big drive together in front of the home fans and score a touchdown with less
+                 3 minutes to play.  The score was now 18-16 and kicking the extra point was of no use
+                 so the decision was made to go for 2pts.  Tension was high in the stadium as Alex Smith found
+                 tight end Demetrius Harris in the end zone.  Celebrations broke out on the field and in the stands we all
+                 thought the game was tied.  A yellow flag was laying on the field though indicating a penalty.
+                 The referee anounced a holding on the Chiefs which resulted in the ball getting moved further away from
+                 the end zone and the playing having to be ran again.  The Chiefs next attempt was unsuccessful.
+                 The situation looked bad but we still had a chance if the defense could stop the Steelers.  They could not,
+                 Steelers got the first down and were able to run out the clock.</p>
+               <h1> End of Game... Score: 18-16 Steelers<h1>
+       </article>
+           <p>The fans fell silent and began their exit from stadium.  The 2016-2017 Nfl season had come to a heartbreaking end
+             for the Chiefs and their fans</p>
+   </main>
+   <img src="C:\Users\Owner\lc101\html-me-something\images\Emptylot.jpg" alt="Cleared out Arrowhead" height='350' width= '700'>
+
+   <footer>
+       <p>Game Summary:  <a href ='#1stQtr'>First Quarter</a>    <a href = '#2ndQtr'>Second Quarter</a>    <a href = '#3rdQtr'>Third Quarter</a>    <a href = '#4thQtr'>Forth Quarter</a></p>
+   </footer>
+</body>
+</html>
