Added styles to html-me-smoething

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="styles.css">
    <title>The Final Chiefs Game of the '2016-'17 Season</title>
 </head>
 <body>
    <main>
+   <h1> The Kansas City Chiefs Last Game of the 2016-17 Season</h1>
        <article>
            <header>
-               <h1>The Tailgate</h1>
+               <h2>The Tailgate</h2>
            </header>
                <p>Kansas City weathermen had spent the entire week leading up to
                   the chiefs game prediciting an ice storm for the ages.  My friends
@@ -18,11 +20,11 @@
                   going, and favorite pregame beverages in hand. 32 degrees and rain did nothing to calm
                   the excitement of the Chiefs fans!  We ate food, met our neighbors, and played games until 7
                   o'clock rolled around and it was time to get into our seats.</p>
-               <img src='C:\Users\Owner\lc101\html-me-something\images\tailgate1.jpg' alt="Full parking lot" height='350' width= '700'>
+               <img class= 'img1' src='C:\Users\Owner\lc101\html-me-something\images\tailgate1.jpg' alt="Full parking lot" height='350' width= '700'>
        </article>
        <article>
            <header>
-               <a name= '1stQtr'><h1>First Quarter</h1></a>
+               <a name= '1stQtr'><h2>First Quarter</h2></a>
            </header>
                <p>The game between the Pittsburgh Steelers and the Kansas City Chiefs starts and the Arrowhead
                   crowd is noisy and electric from this moment on until the end.</p>
@@ -33,7 +35,7 @@
        </article>
        <article>
            <header>
-               <a name= '2ndQtr'><h1>Second Quarter</h1></a>
+               <a name= '2ndQtr'><h2>Second Quarter</h2></a>
            </header>
                <p>The second quarter does not go so well for the Chiefs.  The Chiefs defense gets an interception but
                  the offense gives an interception, a fumble, and a punt back to Pittsburgh.  Pittsburgh takes these
@@ -42,7 +44,7 @@
        </article>
        <article>
            <header>
-               <a name= '3rdQtr'><h1>Third Quarter</h1></a>
+               <a name= '3rdQtr'><h2>Third Quarter</h2></a>
            </header>
                <p>The third quarter goes by without much action.  Each team scored one field goal.  Other than that there
                  were just punts back and forth.  In hindsight this would have been a good quarter to wait in the concessions
@@ -51,7 +53,7 @@
        </article>
        <article>
            <header>
-               <a name= '4thQtr'><h1>Forth Quarter</h1></a>
+               <a name= '4thQtr'><h2>Forth Quarter</h2></a>
            </header>
                <p>The forth quarter opens with the Steelers kicking thier sixth and final field goal of the game.
                  The Chiefs would then put a big drive together in front of the home fans and score a touchdown with less
@@ -65,13 +67,16 @@
                  Steelers got the first down and were able to run out the clock.</p>
                <h1> End of Game... Score: 18-16 Steelers<h1>
        </article>
+       <article>
            <p>The fans fell silent and began their exit from stadium.  The 2016-2017 Nfl season had come to a heartbreaking end
              for the Chiefs and their fans</p>
-   </main>
-   <img src="C:\Users\Owner\lc101\html-me-something\images\Emptylot.jpg" alt="Cleared out Arrowhead" height='350' width= '700'>
 
-   <footer>
-       <p>Game Summary:  <a href ='#1stQtr'>First Quarter</a>    <a href = '#2ndQtr'>Second Quarter</a>    <a href = '#3rdQtr'>Third Quarter</a>    <a href = '#4thQtr'>Forth Quarter</a></p>
-   </footer>
+
+           <img class= 'img2' src="C:\Users\Owner\lc101\html-me-something\images\Emptylot.jpg" alt="Cleared out Arrowhead" height='350' width= '700'>
+       </article>
+   </main>
+   <div class= 'footer'><footer>
+       <p>Game Summary: <div> <a href ='#1stQtr'>First Quarter</a>    <a href = '#2ndQtr'>Second Quarter</a>    <a href = '#3rdQtr'>Third Quarter</a>    <a href = '#4thQtr'>Forth Quarter</a></div></p>
+   </footer></div>
 </body>
 </html>
