addition to assignment1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    <main>
-   <h1> The Kansas City Chiefs Last Game of the 2016-17 Season</h1>
+   <h1 id = "maintitle":> The Kansas City Chiefs Last Game of the 2016-17 Season</h1>
        <article>
            <header>
                <h2>The Tailgate</h2>
@@ -76,7 +76,7 @@
        </article>
    </main>
    <div class= 'footer'><footer>
-       <p>Game Summary: <div> <a href ='#1stQtr'>First Quarter</a>    <a href = '#2ndQtr'>Second Quarter</a>    <a href = '#3rdQtr'>Third Quarter</a>    <a href = '#4thQtr'>Forth Quarter</a></div></p>
+       <p>Game Summary: <div> <a href ='#1stQtr'>First Quarter</a>  &nbsp;&nbsp;&nbsp;  <a href = '#2ndQtr'>Second Quarter</a>  &nbsp;&nbsp;&nbsp;  <a href = '#3rdQtr'>Third Quarter</a>  &nbsp;&nbsp;&nbsp;  <a href = '#4thQtr'>Forth Quarter</a></div></p>
    </footer></div>
 </body>
 </html>
